--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,15 @@
-<html>
+{% extends "layout.html" %}
 
-<body>
-<head>
-    <title>BlueberryBnB Registration</title>
-</head>
-<h1>Registration page</h1> 
+
+
+
+{% block title %}
+    Register
+{% endblock %}
+
+{% block main %}
+
+<h1>Register</h1> 
 
 <form action = "/register" method = "POST">
     <input type = "email" name = "email" placeholder = "email address"/>
@@ -12,9 +17,4 @@
 
 </form>
     
-</body>
-
-
-
-
-</html>
+{% endblock %}
