--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
                         <ul class="navbar-nav me-auto mt-2">
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/">add property</a></li> <!-- placeholder href which should have method for routing -->
+                            <li class="nav-item"><a class="nav-link" href="/add_property">add property</a></li> <!-- placeholder href which should have method for routing -->
                             <li class="nav-item"><a class="nav-link" href="/">log out</a></li> <!-- placeholder href which should have method for routing , logging out of session and redirecting to index.html-->
                         </ul>
                     {% else %}
