--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,9 @@
     <h1>Login</h1>
     <form action="/login" method="post">
         
-        <label for="email">Email:</label>
+        <label for="email">Email</label><br>
         <input type="text" id="email" name="email"><br><br>
-        <label for="password">Password:</label>
+        <label for="password">Password</label><br>
         <input type="password" id="password" name="password"><br><br>
         <button type="submit">Login</button>
     </form>
