--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,8 @@
 <h1>Register</h1> 
 
 <form action = "/register" method = "POST">
-    <input type = "email" name = "email" placeholder = "email address"/>
+    <label for="email">Email</label><br>
+    <input type = "email" name = "email" placeholder = "email address"/><br><br>
     <input type = "submit" id = "register" value = "Register" />
 
 </form>
