--- a/static/style.css
+++ b/static/style.css
@@ -2,17 +2,113 @@ body {
     font-size: 18px;
     background-image:url('https://png.pngtree.com/thumb_back/fh260/background/20190223/ourmid/pngtree-starry-background-dot-starlight-and-galaxy-background-material-backgroundgalaxystarblackspaceuniverse-image_86868.jpg');
     background-size: cover;
-    color: white
+    color: white;
+    font-family: 'Courier New', monospace;
+
+}
+
+.container {
+    width: 50%;
+    max-width: 80%;
+    padding: 2rem;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.7);
+    /*background-color: rgba(255, 255, 255, 0.5);*/
+    background-color: white;
+    
+    border-radius: 12px;
+}
+
+.form_add_property{
+    background-color: transparent;
+    
+}
+
+label {
+    color: black; /* Text color for labels */
+    display:block;
+    text-align: left;
+}
+
+
+input::placeholder {
+    opacity: 0.5;
+    color: red;
+    text-align: left
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    border: 2px solid pink;
+    border-radius: 4px;
+    resize: none;
+}
+textarea::placeholder{
+    opacity: 0.5;
+    color: red;
+    text-align: left
+}
+
+textarea:focus{
+    outline: 3px solid #555;
+}
+
+
+/* input[type = "text"]{
+    width: 100%;
+    border: 2px solid pink;
+    border-radius: 4px;
+} */
+
+input#property_name{
+    width: 100%;
+    border: 2px solid pink;
+    border-radius: 4px;
+}
+
+
+
+
+input#price_per_night{
+    width: 100%;
+    border: 2px solid pink;
+    border-radius: 4px;
 }
 
 ul {
     list-style: none;
-  }
+}
 
 #property_link{
-    color:pink; 
- }
+    color:pink
+}
 
 #property_link:hover {
     color: white;
- }
+}
+
+input#submit_add_property {
+    background-color: #f2f7f5; 
+    color: black;
+    border: none; 
+    width: 100%;
+    border-radius: 12px;
+    padding: 10px;
+
+
+
+}
+input#submit_add_property:hover {
+    background-color: rgb(255, 231, 145);
+    color: rgb(148, 136, 136);
+}
+
+
+*:focus {
+    outline: none;
+}
+
+
+input[type=text]:focus{
+    outline: #555 solid 3px;
+}
