--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/add_property">add property</a></li> <!-- placeholder href which should have method for routing -->
-                            <li class="nav-item"><a class="nav-link" href="/">log out</a></li> <!-- placeholder href which should have method for routing , logging out of session and redirecting to index.html-->
+                            <li class="nav-item"><a class="nav-link" href="/logout">log out</a></li> <!-- placeholder href which should have method for routing , logging out of session and redirecting to index.html-->
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
