--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>MakersBnB: Book a Place</title>
+        <title>MakersBnB: Bookings</title>
 
         <!--
             Head to https://github.com/makersacademy/web-applications-in-python/blob/main/pills/loading_css_or_static_files.md
@@ -10,11 +10,11 @@
         <link rel="stylesheet" href="/static/style.css" >
     </head>
     <body>
-        <h1> {{property._property_name}} </h1>
-        
+        <h1> Bookings </h1>
+        <!-- <h2></h2>
         <p> 
-            Description: {{property._description}}<br>
-            Price per night: £{{property._price_per_night}}
+            Description: <br>
+            Price per night: £
         </p>
 
         <form action="/bookings" method="post">
@@ -22,10 +22,10 @@
             <input type="date" name="date_from" value="date_from">
             <br>
             <label for="date_to">Date To:</label>
-            <input type="date" name="date_to" value="date_to">
+            <input type="date" name="date_from" value="date_from">
             <br><br>
             <input type="submit" value="Create Booking">
             
-        </form>
+        </form> -->
     </body>
 </html>
