For working from a different laptop

--- a/templates/get_property.html
+++ b/templates/get_property.html
@@ -13,15 +13,15 @@
         Price per night: £{{property._price_per_night}}
     </p>
 
-    <form action="/bookings" method="post">
-        <label for="date_from">Date From: </label>
-        <input type="date" name="date_from" value="date_from">
-        <br>
-        <label for="date_to">Date To:</label>
-        <input type="date" name="date_from" value="date_from">
-        <br><br>
-        <input type="submit" value="Create Booking">
-        
-    </form>
-
-{% endblock %}
+        <form action="/bookings" method="post">
+            <label for="date_from">Date From: </label>
+            <input type="date" name="date_from" value="date_from">
+            <br>
+            <label for="date_to">Date To:</label>
+            <input type="date" name="date_to" value="date_to">
+            <br><br>
+            <input type="submit" value="Create Booking">
+            
+        </form>
+    </body>
+</html>
