app.py add properties and testing for rendering

--- a/templates/adding_property.html
+++ b/templates/adding_property.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    Add New Property
-{% endblock %}
+{% block title %}Add New Property{% endblock %}
 
 {% block main %}
 
