--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -27,5 +27,8 @@
             <input type="submit" value="Create Booking">
             
         </form> -->
+        {% for booking in bookings %} 
+        <p>{{booking.id}}</p>
+        {% endfor %}
     </body>
 </html>
