my_properties.html created with list of properties that the user has. The layout.html updated to include a link to these properties, and app.py route added to render the my_properties.html

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,7 @@
                         <ul class="navbar-nav me-auto mt-2">
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/my_properties">my properties</a></li>
                             <li class="nav-item"><a class="nav-link" href="/add_property">add property</a></li> <!-- placeholder href which should have method for routing -->
                             <li class="nav-item"><a class="nav-link" href="/logout">log out</a></li> <!-- placeholder href which should have method for routing , logging out of session and redirecting to index.html-->
                         </ul>
