tests added however need to further have sessions reviewed. app.py my_properties route added try and except for handling if user not logged in. Test failed for login.html, and html was updated. my_properties.html created

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    Login
-{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block main %}
 
