--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
         <link href="/static/style.css" rel="stylesheet">
 
         <title>BlueberryBnB: {% block title %}{% endblock %}</title>
-
+        <script src="/static/script.js"></script>
     </head>
 
     <body>
