--- a/templates/my_properties.html
+++ b/templates/my_properties.html
@@ -8,7 +8,7 @@
 
     {% if my_properties %}
     <div id = "my-property-listings">
-        <ul class = "class-list">
+        <ul class = "card-list">
             {% for property in my_properties %}
                 <li class = "card">
                     <a id="property_link" href="/">
