--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,16 @@
 {% block main %}
 
     <h1>Login</h1>
-    <form action="/login" method="post">
-        
-        <label for="email">Email</label><br>
-        <input type="text" id="email" name="email"><br><br>
-        <label for="password">Password</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <button type="submit">Login</button>
-    </form>
-    
+
+    <div class = "log-in-card">
+        <form action="/login" method="post">
+            
+            <label for="email">Email</label>
+            <input type="text" id="email" name="email"><br><br>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password"><br><br>
+            <input type="submit" name = "submit_login" id = "submit_login" value= "Log in">
+        </form>
+    </div>
 {% endblock %}
 
