--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
     <h1>Login</h1>
 
-    <div class = "log-in-card">
+    <div class = "log-in_register-card">
         <form action="/login" method="post">
             
             <label for="email">Email</label>
