tests added to app.py for register and login with conftest updated to add password to fixture.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    homepage
-{% endblock %}
+{% block title %}Homepage{% endblock %}
 
 {% block main %}
 
