--- a/templates/successful_registration.html
+++ b/templates/successful_registration.html
@@ -1,12 +1,10 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    Successful registration
-{% endblock %}
+{% block title %}Successful registration{% endblock %}
 
 {% block main %}
 
-<h2> You have successfully registered with the following email: {{ email }} </h2>
+<h2>You have successfully registered with the following email: {{ email }}</h2>
 
 <a href= "/">Back to Home</a>
 
