--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
 
         <link href="/static/style.css" rel="stylesheet">
 
-        <title>BlueberryBnB: {% block title %}{% endblock %}</title>
+        <title>BlueberriesBnB: {% block title %}{% endblock %}</title>
         <script src="/static/script.js"></script>
     </head>
 
@@ -24,7 +24,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">BlueberryBnB</a>
+                <a class="navbar-brand" href="/"><img src="/static/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""> BlueberriesBnB</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
