--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,7 @@
 
         <title>BlueberryBnB: {% block title %}{% endblock %}</title>
         <script src="/static/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     </head>
 
     <body>
