--- a/static/css/style.css
+++ b/static/css/style.css
@@ -313,10 +313,10 @@ input[type = text]{
     border-radius: 4px;
 }
 
-#date_from {
-    position: absolute;
+.input-daterange.input-group input{
     height: 35px;
-    margin: 0 auto 10;
+    margin-top: 0;
+    margin-bottom: 10;
     width: 100%;
     font-family: 'Courier New', monospace;
     font-size: 18px;
@@ -324,21 +324,36 @@ input[type = text]{
     text-transform: uppercase;
     border:pink;
     border-style: dotted;
-    border-radius: 12px;
-    padding: 3px 3px;
+    padding: 3px 6px;
     color: hsl(0, 6%, 28%);
 }
 
-#input_icon {
-    position: relative;
-    left: 240px;
-    height: 35px;
-    margin: 5px auto;
-    width: 100%;
-    font-size: 18px;
-    border:pink;
+#date_from{
+    position: absolute;
     border-radius: 12px;
+}
+
+#date_to{
+    border-radius: 12px;
+}
+#date-separator {
+    position: relative;
+    left: -20px;
+    margin-top: 30px;
+    margin-bottom: -5px;
+}
+
+.input-icon {
+    position: relative;
+    left: 490px;
+    height: 35px;
+    font-size: 20px;
+    width: 100%;
     color: hsl(0, 6%, 28%);
+}
+
+#input_icon_end {
+    top: -35px;
 }
 
 
