end_to_end tested

--- a/templates/get_property.html
+++ b/templates/get_property.html
@@ -44,7 +44,7 @@
                         </span>
                     </div>
                 </div>
-            <input type="submit" value="Create Booking">
+            <input type="submit" value="Create Booking" id="submit">
             
         </form>
     </div>
