--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,12 +11,11 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
-        <!-- https://favicon.io/emoji-favicons/tent/ -->
         <link href="/static/favicon.ico" rel="icon">
 
         <link href="/static/style.css" rel="stylesheet">
 
-        <title>BlueberryBnB: {% block title %}{% endblock %}</title>
+        <title>BlueberriesBnB: {% block title %}{% endblock %}</title>
         <script src="/static/script.js"></script>
     </head>
 
@@ -24,7 +23,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">BlueberryBnB</a>
+                <a class="navbar-brand" href="/"><img src="/static/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt=""> BlueberriesBnB</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -61,7 +60,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-            WIP
+            
         </footer>
 
     </body>
