--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,7 @@ body {
     min-width:fit-content;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.7);
     transition: 0.3s;
-    height:280px;
+    height:300px;
     padding: 1rem;
     background-color: white;
     margin:20px auto;
@@ -345,7 +345,7 @@ input[type = text]{
 
 .input-icon {
     position: relative;
-    left: 490px;
+    left: 92%;
     height: 35px;
     font-size: 20px;
     width: 100%;
