Changed variable names as per review

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -328,12 +328,12 @@ input[type = text]{
     color: hsl(0, 6%, 28%);
 }
 
-#date_from{
+#start_date{
     position: absolute;
     border-radius: 12px;
 }
 
-#date_to{
+#end_date{
     border-radius: 12px;
 }
 #date-separator {
